<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pgarcia_utils</name>
  <version>1.0.0</version>
  <description>Package with custom tools and utils</description>
  <maintainer email="pgarcia.developer@gmail.com">Pablo Garcia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <build_depend>nav2_common</build_depend>
  <build_depend>navigation2</build_depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
